--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
 
     <script>
         // 🔥 Firebase конфигурацияңызды МЫНАҒА ауыстырыңыз
-        const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCuCW1G6bqxb8EI_YZZ2dpqnyDC1FXaRrw",
+  authDomain: "bagalausaity.firebaseapp.com",
+  databaseURL: "https://bagalausaity-default-rtdb.firebaseio.com",
+  projectId: "bagalausaity",
+  storageBucket: "bagalausaity.firebasestorage.app",
+  messagingSenderId: "159427702781",
+  appId: "1:159427702781:web:d56f44c70ec7ccbaeaf394",
+  measurementId: "G-KV7WSEHL3W"
+};
 
         // Firebase бастау
         firebase.initializeApp(firebaseConfig);
