--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js"></script>
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCuCW1G6bqxb8EI_YZZ2dpqnyDC1FXaRrw",
-      authDomain: "bagalausaity.firebaseapp.com",
-      databaseURL: "https://bagalausaity-default-rtdb.firebaseio.com",
-      projectId: "bagalausaity",
-      storageBucket: "bagalausaity.appspot.com",
-      messagingSenderId: "159427702781",
-      appId: "1:159427702781:web:d56f44c70ec7ccbaeaf394",
-      measurementId: "G-KV7WSEHL3W"
-    };
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCuCW1G6bqxb8EI_YZZ2dpqnyDC1FXaRrw",
+  authDomain: "bagalausaity.firebaseapp.com",
+  databaseURL: "https://bagalausaity-default-rtdb.firebaseio.com",
+  projectId: "bagalausaity",
+  storageBucket: "bagalausaity.firebasestorage.app",
+  messagingSenderId: "159427702781",
+  appId: "1:159427702781:web:d56f44c70ec7ccbaeaf394",
+  measurementId: "G-KV7WSEHL3W"
+};
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
   </script>
